# sublib-cli

./: .gitignore  README.md  requirements.txt  requirements_dev.txt  setup.cfg  sub-converter.py  sub_converter.py  sublib.py
data/: logo.ai
executable/: sub_converter.spec
lib/: test_sublib.py
sublib-cli/: sublib-cli.py
sublib_cli/: __init__.py  cli.py
tests/: test_detect_encoding.py  test_end.py  test_find_files.py  test_get_new_path.py  test_get_subtitle.py  test_parser.py  test_set_logger.py  test_write_file.py
