[metadata]
name = sublib-cli
version = 1.3.0
url = https://github.com/TheFifthLeaf/sublib-cli
download_url = https://github.com/TheFifthLeaf/sublib-cli/archive/refs/tags/v1.3.0.zip
project_urls =
    pypi = https://pypi.org/project/sublib-cli/
author = Dawid Jach
author_email = jach.developer@protonmail.com
license = GNU GPLv3
license_files = LICENSE
description = CLI implementation of the sublib package.
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    python
    subtitle
    subtitles
    subrip
    microdvd
    mplayer
    mplayer2
    tmplayer
    movies
    mkv
    converter
    sublib
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Natural Language :: English
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows

[options]
zip_safe = False
install_requires =
    chardet
    sublib
tests_require =
    pytest
    pytest_mock
python_requires = >= 3.6
include_package_data = True
packages = find:
